@startuml
!include .\ChargeCommon.puml
package Charge{
    package AfterSchoolCharge{
        class AfterSchoolRemittance{
            name: string
            created_at: datetime
        }
        class AfterSchoolReceipt {
            amount: float
        }
    }
    package Membership{
        class MembershipRemittance {
            identifier: string
            created_at: datetime
        }
        class MembershipReceipt
        class Fee{
            amount: integer
        }
    }
    package CustodyCharge{
        class CustodyRemittance{
            name: string
            created_at: datetime
        }
        class CustodyReceipt {
            amount: float
        }
    }

    package CampsCharge{
        class CampsRemittance{
            name: string
            created_at: datetime
            payment_date: datetime
            concept: string
        }
        class CampsReceipt {
            amount: float
        }
    }

    CampsReceipt --> Receipt
    CampsRemittance --> Remittance

    CampsReceipt *-- State
    CampsRemittance *-- "1..N" CampsReceipt

    MembershipReceipt --> Receipt
    MembershipRemittance --> Remittance
    AfterSchoolReceipt --> Receipt
    AfterSchoolRemittance --> Remittance
    CustodyReceipt --> Receipt
    CustodyRemittance --> Remittance

    MembershipReceipt *-- State
    MembershipRemittance *-- "1..N" MembershipReceipt
    AfterSchoolReceipt *-- State
    AfterSchoolRemittance *-- "1..N" AfterSchoolReceipt
    CustodyReceipt *-- State
    CustodyRemittance *-- "1..N" CustodyReceipt
}

package AcademicCourse{
    class AcademicCourse
}

Fee --o AcademicCourse
MembershipRemittance o-left- AcademicCourse

package Family{
    class Family
}
MembershipReceipt o--  Family

package AfterSchool{
    class AfterSchoolEdition
    class AfterSchoolRegistration
}
AfterSchoolRemittance o-- "1..N" AfterSchoolEdition
AfterSchoolReceipt o-- AfterSchoolRegistration
AfterSchoolEdition --o AfterSchoolRegistration
package Custody{
    class CustodyEdition
    class CustodyRegistration
}
CustodyRemittance o-- "1..N" CustodyEdition
CustodyReceipt o-- CustodyRegistration
CustodyEdition --o CustodyRegistration

package Camps{
    class CampsEdition
    class CampsRegistration
}
CampsRemittance o-- "1..N" CampsEdition
CampsReceipt o-- CampsRegistration
CampsEdition --o CampsRegistration

@enduml
